--- a/public/resources/css/dashboard.css
+++ b/public/resources/css/dashboard.css
@@ -71,3 +71,8 @@ table.dataTable tbody tr:hover {
     background-color: #00897b !important; /* teal lighten-1 */
 }
 
+.modal.modal-grande {
+    width: 80% !important;
+    max-height: 90% !important;
+}
+
